--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,26 +67,7 @@ footer {
 .navbar {
   background-color: #333;
 }
-/* 
-.three-pictures {
-  width: 80%;
-  left:20%;
-} */
 
-/* .index-image {
-  width: 100%;
-  height: 40vw;
-  object-fit: cover;
-} */
-
-/* #index-footer {
-  font-size: 30px;
-  position:absolute;
-  bottom:0;
-  width:100%;
-  height:60px;   /* Height of the footer */
-  /* background:rgb(150, 196, 205);
-} */
 body {
   /* background: rgb(190, 204, 207); */
   background-image: url("./pictures/background.jpg");
@@ -96,6 +77,14 @@ h2 {
   font-family: Fantasy;
   font-weight: bold;
   font-family: 'Chelsea Market', cursive;
+  -webkit-text-stroke: 1px black;
+  color:black;
+  text-shadow:
+      3px 3px 0 rgb(213, 202, 202),
+    -1px -1px 0 white,  
+     1px -1px 0 rgb(151, 148, 148),
+     -1px 1px 0 white,
+      1px 1px 0 white;
 }
 /* styling project page */
 h1 {
@@ -170,4 +159,9 @@ h1 {
 }
 .about-me-page {
   width: 80%;
+}
+
+/* view button */
+.view-btn {
+  background-color: lightseagreen;
 }
