--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,7 +106,7 @@ h1 {
       1px 1px 0 #000;
 }
 .p-description {
-  background-color: #f7f7f7;
+  background-color: #edddec;
   padding: 20px;
   text-indent: 10%;
   
